# bolt

./: .gitignore  BUGS  CONTEXT_utils.c  CONTEXT_utils.h  ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile.msvc  Makefile64.msvc  PE.c  PE.h  PE_add_import.c  PE_add_imports.c  PE_dump_imports.c  PE_filling_code_patterns.c  PE_imports.c  PE_imports.h  PE_imports_test.c  PE_info.c  PE_patch_CALL_JMP_import.c  PE_patcher.c  PE_remove_import.c  PE_remove_import_test.c  PE_search_refs.c  PE_search_str_refs.c  PE_test.c  README  README.md  REG.h  X86_emu.c  X86_emu.h  X86_emu_test.c  X86_emu_tests.c  X86_emu_tests.h  X86_register_helpers.c  X86_register_helpers.h  address.h  bolt_addons.h  bolt_mingw_addons.h  (+18 more)
PE_add_imports_tests/: cmp.bat  imports_table32.txt  imports_table64.txt  sample_DLL1.c  sample_DLL1.def  sample_DLL2.c  sample_DLL2.def  test64.bat  test86.bat  use_DLL.c
include/: CONTEXT_utils.h  Makefile.am  Makefile.in  PE.h  PE_filling_code_patterns.h  PE_imports.h  X86_emu.h  X86_register_helpers.h  bolt_mingw_addons.h  bolt_stuff.h  disas_utils.h  memorycache.h
lib/: CONTEXT_utils.c  Makefile.am  Makefile.in  PE.c  PE_filling_code_patterns.c  PE_imports.c  X86_emu.c  X86_register_helpers.c  bolt_stuff.c  disas_utils.c  memorycache.c
src/: Makefile.am  Makefile.in  PE_add_imports.c  PE_filling_code_patterns_test.c  PE_remove_import.c  PE_search_str_refs.c
tests/: Makefile.am  Makefile.in  run-bolt_tests.sh
